# WEB_AI

./: app.py  index.html  pyproject.toml  requirements.txt  tempCodeRunnerFile.py
data/processed/: README.md
data/raw/: README.md
notebooks/: example.ipynb
scripts/: inference.py  preprocess_images.py  train.py
src/data/: preprocessing.py
src/models/: model.py
src/visualization/: visualize.py
static/: main.js  style.css
tests/: test_preprocessing.py
