[project]
name = "web-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Le Hoang",email = "le294594@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
